# Destruct-CLI

./: .gitignore  Cargo.toml  readme.md
src/: console.rs  main.rs  path.rs  sync.rs
