[package]
name = "destruct-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
ansi-escapes = "0.2.0"
ansi_term = "0.12"
tracing = "0.1.40"
serde_json = "1"
s3sync = "1.4.0"
dirs = "5.0.1"
